# hllm

./: .gitignore  CLAUDE.md  LICENSE  README.md  download_model.py  hllm.yaml.example  pyproject.toml  pyrightconfig.json  requirements.txt
.codebuddy/skills/: feat-development.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  benchmark_report.md  benchmark_report_remote.md  coverage_report.md  flash_attention.md  mlx_backend.md  paged_attention_design.md  pypi_release.md  roadmap.md  type_coverage_report.md  vllm-comparison.md
examples/: api_client.py  api_server.py  basic.py  benchmark.py  mlx_example.py  test_backends.py  test_openai_client.py
hllm/: __init__.py  client.py  config.py  generate.py  model.py  server.py  tokenizer.py
hllm/backends/: __init__.py  base.py  mlx.py  paged_pytorch.py  pytorch.py
hllm/paged_attention/: __init__.py  block_manager.py  paged_attention.py  scheduler.py
hllm/utils/: __init__.py  model_downloader.py
notes/: 2026-04-05-dev-diary.md  2026-04-05-vibe-coding-log.md
tests/: conftest.py  test_auto_select.py  test_backends.py  test_backends_extended.py  test_backends_refactored.py  test_base_backend.py  test_client.py  test_config.py  test_create_backend.py  test_generate.py  test_generate_core.py  test_generate_extended.py  test_generate_helpers.py  test_generate_more.py  test_generate_simple.py  test_hllm.py  test_hllm_extended.py  test_init.py  test_mlx_backend.py  test_model.py  test_model_downloader.py  test_model_init.py  test_paged_attention.py  test_pytorch_backend.py  test_server.py  test_server_simple.py  test_tokenizer.py
