[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hllm"
version = "0.1.0"
description = "A lightweight LLM inference framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["hllm*"]

[project.urls]
Homepage = "https://github.com/heepengpeng/hllm"