[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "light-llm-hp"
version = "0.4.4"
description = "A lightweight LLM inference framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Heepengpeng", email = "heepengpeng@example.com"}
]
keywords = ["llm", "inference", "transformers", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
]
mlx = [
    "mlx>=0.15.0",
    "mlx-lm>=0.15.0",
]

[tool.setuptools.packages.find]
include = ["hllm*"]

[project.urls]
Homepage = "https://github.com/heepengpeng/hllm"
Repository = "https://github.com/heepengpeng/hllm.git"